<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="user_login">登录</string>
    <string name="user_go_homepage">查看个人主页 ></string>
    <string name="user_collection">收藏</string>
    <string name="user_comment">评论</string>
    <string name="user_mine_message">我的消息</string>
    <string name="user_mine_attention">我的关注</string>
    <string name="user_mine_cache">我的缓存</string>
    <string name="user_watch_history">观看记录</string>
    <string name="user_feedback">意见反馈</string>
    <string name="user_contributions">我要投稿</string>
    <string name="user_setting">设置</string>
    <string name="user_about">关于</string>
    <string name="user_settings_icon">&#xe645;</string>
    <string name="user_back_icon">&#58933;</string>


    <string name="split_line">|</string>

    <string name="app_slogan">- Your contribution is highly appreciated! -</string>
    <string name="app_slogan_description">让每一个人都开眼，开了又开。</string>

    <!-- 设置 -->
    <string name="daily_update_hint">- 日报更新提醒- </string>
    <string name="setting_open">打开</string>
    <string name="setting_close">关闭</string>
    <string name="wifi_auto_play">- Wi-Fi 自动播放 -</string>
    <string name="mobile_network_auto_play">- 移动网络 自动播放 -</string>
    <string name="translate">- 翻译 -</string>
    <string name="clear_all_cache">清除所有缓存</string>
    <string name="setting_cache_path">选择缓存路径</string>
    <string name="setting_play_definition">选择播放清晰度</string>
    <string name="setting_cache_definition">选择缓存清晰度</string>
    <string name="check_version">检查版本更新</string>
    <string name="user_agreement">用户协议</string>
    <string name="legal_notices">隐私政策</string>
    <string name="video_fun_statement">视频功能声明</string>
    <string name="copyright_report">版权举报</string>

    <!-- 通知 -->
    <string-array name="user_notifications">
        <item>@string/notification_push</item>
        <item>@string/notification_interaction</item>
        <item>@string/notification_inbox</item>
    </string-array>
    <string name="notification_push">推送</string>
    <string name="notification_interaction">互动</string>
    <string name="notification_inbox">私信</string>

    <!-- 登录 -->
    <string name="guide_login_tips_one">登录后即可查看评论回复、点赞及关注等通知信息</string>
    <string name="guide_login_tips_two">别错过重要的信息</string>
    <string name="guide_login_tips_three">点击登录后可关注主题和作者</string>

</resources>