<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivTips"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_77"
        android:src="@drawable/ic_user_login_tips" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        android:text="@string/guide_login_tips_two"
        android:textColor="@color/colorTextPrimaryDark"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/tvLoginTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/guide_login_tips_one"
        android:textColor="@color/colorTextPrimaryDark"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="@dimen/dp_220"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />
</LinearLayout>